feat: regenerate frontend models for getting concerns
