# src/BindingChaos.Web/src/api/models/ApiResponseOfPaginatedResponseOfConcernListItemResponse.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { PaginatedResponseOfConcernListItemResponse } from './PaginatedResponseOfConcernListItemResponse';
+import {
+    PaginatedResponseOfConcernListItemResponseFromJSON,
+    PaginatedResponseOfConcernListItemResponseFromJSONTyped,
+    PaginatedResponseOfConcernListItemResponseToJSON,
+    PaginatedResponseOfConcernListItemResponseToJSONTyped,
+} from './PaginatedResponseOfConcernListItemResponse';
+
+/**
+ * 
+ * @export
+ * @interface ApiResponseOfPaginatedResponseOfConcernListItemResponse
+ */
+export interface ApiResponseOfPaginatedResponseOfConcernListItemResponse {
+    /**
+     * 
+     * @type {PaginatedResponseOfConcernListItemResponse}
+     * @memberof ApiResponseOfPaginatedResponseOfConcernListItemResponse
+     */
+    data?: PaginatedResponseOfConcernListItemResponse | null;
+}
+
+/**
+ * Check if a given object implements the ApiResponseOfPaginatedResponseOfConcernListItemResponse interface.
+ */
+export function instanceOfApiResponseOfPaginatedResponseOfConcernListItemResponse(value: object): value is ApiResponseOfPaginatedResponseOfConcernListItemResponse {
+    return true;
+}
+
+export function ApiResponseOfPaginatedResponseOfConcernListItemResponseFromJSON(json: any): ApiResponseOfPaginatedResponseOfConcernListItemResponse {
+    return ApiResponseOfPaginatedResponseOfConcernListItemResponseFromJSONTyped(json, false);
+}
+
+export function ApiResponseOfPaginatedResponseOfConcernListItemResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ApiResponseOfPaginatedResponseOfConcernListItemResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'data': json['data'] == null ? undefined : PaginatedResponseOfConcernListItemResponseFromJSON(json['data']),
+    };
+}
+
+export function ApiResponseOfPaginatedResponseOfConcernListItemResponseToJSON(json: any): ApiResponseOfPaginatedResponseOfConcernListItemResponse {
+    return ApiResponseOfPaginatedResponseOfConcernListItemResponseToJSONTyped(json, false);
+}
+
+export function ApiResponseOfPaginatedResponseOfConcernListItemResponseToJSONTyped(value?: ApiResponseOfPaginatedResponseOfConcernListItemResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'data': PaginatedResponseOfConcernListItemResponseToJSON(value['data']),
+    };
+}
+
