# src/BindingChaos.Web/src/api/models/ConcernListItemResponse.ts
@@ -1,0 +1,105 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { ReferenceSignal } from './ReferenceSignal';
+import {
+    ReferenceSignalFromJSON,
+    ReferenceSignalFromJSONTyped,
+    ReferenceSignalToJSON,
+    ReferenceSignalToJSONTyped,
+} from './ReferenceSignal';
+
+/**
+ * Represents a concern item in a list response.
+ * @export
+ * @interface ConcernListItemResponse
+ */
+export interface ConcernListItemResponse {
+    /**
+     * The unique identifier of the concern.
+     * @type {string}
+     * @memberof ConcernListItemResponse
+     */
+    id?: string;
+    /**
+     * The pseudonym of the user who raised the concern.
+     * @type {string}
+     * @memberof ConcernListItemResponse
+     */
+    raisedByPseudonym?: string;
+    /**
+     * The name of the concern.
+     * @type {string}
+     * @memberof ConcernListItemResponse
+     */
+    name?: string;
+    /**
+     * The tags associated with the concern.
+     * @type {Array<string>}
+     * @memberof ConcernListItemResponse
+     */
+    tags?: Array<string>;
+    /**
+     * The signals related to the concern.
+     * @type {Array<ReferenceSignal>}
+     * @memberof ConcernListItemResponse
+     */
+    signals?: Array<ReferenceSignal>;
+}
+
+/**
+ * Check if a given object implements the ConcernListItemResponse interface.
+ */
+export function instanceOfConcernListItemResponse(value: object): value is ConcernListItemResponse {
+    return true;
+}
+
+export function ConcernListItemResponseFromJSON(json: any): ConcernListItemResponse {
+    return ConcernListItemResponseFromJSONTyped(json, false);
+}
+
+export function ConcernListItemResponseFromJSONTyped(json: any, ignoreDiscriminator: boolean): ConcernListItemResponse {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'raisedByPseudonym': json['raisedByPseudonym'] == null ? undefined : json['raisedByPseudonym'],
+        'name': json['name'] == null ? undefined : json['name'],
+        'tags': json['tags'] == null ? undefined : json['tags'],
+        'signals': json['signals'] == null ? undefined : ((json['signals'] as Array<any>).map(ReferenceSignalFromJSON)),
+    };
+}
+
+export function ConcernListItemResponseToJSON(json: any): ConcernListItemResponse {
+    return ConcernListItemResponseToJSONTyped(json, false);
+}
+
+export function ConcernListItemResponseToJSONTyped(value?: ConcernListItemResponse | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'raisedByPseudonym': value['raisedByPseudonym'],
+        'name': value['name'],
+        'tags': value['tags'],
+        'signals': value['signals'] == null ? undefined : ((value['signals'] as Array<any>).map(ReferenceSignalToJSON)),
+    };
+}
+
