# src/BindingChaos.Web/src/api/models/ReferenceSignal.ts
@@ -1,0 +1,73 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * BindingChaos.Web.Gateway
+ * BindingChaos Web Gateway API
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+/**
+ * Represents a signal referenced by a concern, including its unique identifier and title.
+ * @export
+ * @interface ReferenceSignal
+ */
+export interface ReferenceSignal {
+    /**
+     * The unique identifier of the signal.
+     * @type {string}
+     * @memberof ReferenceSignal
+     */
+    id?: string;
+    /**
+     * The title of the signal.
+     * @type {string}
+     * @memberof ReferenceSignal
+     */
+    title?: string;
+}
+
+/**
+ * Check if a given object implements the ReferenceSignal interface.
+ */
+export function instanceOfReferenceSignal(value: object): value is ReferenceSignal {
+    return true;
+}
+
+export function ReferenceSignalFromJSON(json: any): ReferenceSignal {
+    return ReferenceSignalFromJSONTyped(json, false);
+}
+
+export function ReferenceSignalFromJSONTyped(json: any, ignoreDiscriminator: boolean): ReferenceSignal {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'id': json['id'] == null ? undefined : json['id'],
+        'title': json['title'] == null ? undefined : json['title'],
+    };
+}
+
+export function ReferenceSignalToJSON(json: any): ReferenceSignal {
+    return ReferenceSignalToJSONTyped(json, false);
+}
+
+export function ReferenceSignalToJSONTyped(value?: ReferenceSignal | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'id': value['id'],
+        'title': value['title'],
+    };
+}
+
