# src/BindingChaos.Web/src/api/models/index.ts
@@ -11,6 +11,7 @@ export * from './ApiResponseOfEmergingPatternsFeedViewModel';
 export * from './ApiResponseOfIReadOnlyListOfTrustInviteLinkViewResponse';
 export * from './ApiResponseOfIdeaDetailViewModel';
 export * from './ApiResponseOfIdeasFeedViewModel';
+export * from './ApiResponseOfPaginatedResponseOfConcernListItemResponse';
 export * from './ApiResponseOfPaginatedResponseOfSocietyMemberResponse';
 export * from './ApiResponseOfResolvedInviteLinkResponse';
 export * from './ApiResponseOfSignalDetailViewModel';
@@ -23,6 +24,7 @@ export * from './ApiResponseOfTrustInviteLinkCreatedResponse';
 export * from './AttachmentDetailViewModel';
 export * from './AuthorIdeaRequest';
 export * from './CaptureSignalRequest';
+export * from './ConcernListItemResponse';
 export * from './CoordinatesModel';
 export * from './CreatePostRequest';
 export * from './CreateReplyRequest';
@@ -42,6 +44,7 @@ export * from './IdeaListItemResponse';
 export * from './IdeaResponse';
 export * from './IdeasFeedViewModel';
 export * from './JoinSocietyRequest';
+export * from './PaginatedResponseOfConcernListItemResponse';
 export * from './PaginatedResponseOfIdeaListItemResponse';
 export * from './PaginatedResponseOfSignalViewModel';
 export * from './PaginatedResponseOfSocietyListItemResponse';
@@ -51,6 +54,7 @@ export * from './PostViewModel';
 export * from './PostsViewModel';
 export * from './ProblemDetails';
 export * from './RaiseConcernRequest';
+export * from './ReferenceSignal';
 export * from './ReplyViewModel';
 export * from './ResolvedInviteLinkResponse';
 export * from './SignalDetailViewModel';
